docs/vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Template para criar uma VPC com Sub-redes Publica, Privada (Aplicacao) e Isolada (Banco de Dados)

Parameters:
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16
    Description: Bloco CIDR para a VPC (ex: 10.0.0.0/16)

  PublicSubnetCidr:
    Type: String
    Default: 10.0.1.0/24
    Description: Bloco CIDR para a Sub-rede Publica (ex: 10.0.1.0/24)

  AppSubnetCidr:
    Type: String
    Default: 10.0.2.0/24
    Description: Bloco CIDR para a Sub-rede de Aplicacao (ex: 10.0.2.0/24)

  DBSubnetCidr:
    Type: String
    Default: 10.0.3.0/24
    Description: Bloco CIDR para a Sub-rede de Banco de Dados (ex: 10.0.3.0/24)

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  # Internet Gateway para Sub-rede Publica
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Sub-redes
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnetCidr
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet

  AppSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref AppSubnetCidr
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: AppSubnet

  DBSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref DBSubnetCidr
      AvailabilityZone: !Select [2, !GetAZs '']
      Tags:
        - Key: Name
          Value: DBSubnet

  # Route Table Publica (Internet Gateway)
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  # NAT Gateway para Sub-rede de Aplicacao (Privada)
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    DependsOn:
      - GatewayAttachment
      - PublicSubnet
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: MyNATGateway

  # Route Table Privada (Aplicacao - acesso via NAT Gateway)
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  # Associacao da Sub-rede de Aplicacao a Route Table Privada
  AppSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppSubnet
      RouteTableId: !Ref PrivateRouteTable

  # Route Table Isolada (Banco de Dados - sem acesso a internet)
  DBRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: DBRouteTable

  # Associacao da Sub-rede de Banco de Dados a Route Table Isolada
  DBSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet
      RouteTableId: !Ref DBRouteTable

Outputs:
  VPCId:
    Value: !Ref VPC
    Description: ID da VPC criada

  PublicSubnetId:
    Value: !Ref PublicSubnet
    Description: ID da Sub-rede Publica

  AppSubnetId:
    Value: !Ref AppSubnet
    Description: ID da Sub-rede de Aplicacao

  DBSubnetId:
    Value: !Ref DBSubnet
    Description: ID da Sub-rede de Banco de Dados
